Update Dockerfile to modify JPEG2000 handling